# WeAssistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  langgraph_server.py  migrate.py  pyproject.toml  test.py
app/: main.py
app/api/: __init__.py  base.py  deps.py
app/api/v1/: __init__.py  chat.py  documents.py  messages.py  threads.py  users.py
app/config/: settings.py
app/core/: agent.py  checkpoint.py  exceptions.py  ingestor.py  llm.py  state.py  summary.py  vector_store.py
app/models/: __init__.py  base.py  document.py  intent.py  message.py  thread.py  user.py
app/schemas/: __init__.py  chat.py  document.py  message.py  rag.py  thread.py  user.py
app/services/: agent.py  chat_service.py  classifier.py  documents.py  generator.py  messages.py  moderator.py  orchestrator.py  rag.py  sessions.py  threads.py  users.py
app/utils/: database.py  file_processor.py  init_db.py  loaders.py  qdrant_init.py
