[project]
name = "weassistant"
version = "0.1.0"
description = "A FastAPI project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.106.1",
    "langchain-core>=0.3.75",
    "langchain-text-splitters>=0.3.11",
]

[tool.uv]
