[project]
name = "weassistant"
version = "0.1.0"
description = "A FastAPI project."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.0.0",
    "psycopg[binary]>=3.2.10",
    "python-multipart>=0.0.20",
    "psycopg-pool>=3.2.6",
    "httpx>=0.28.1",
    "langchain>=1.0.0a4",
    "langgraph>=1.0.0a3",
    "langchain-openai>=0.3.32",
    "langchain-postgres>=0.0.15",
    "langgraph-checkpoint-postgres>=2.0.23",
    "async-lru>=2.0.5",
    "langgraph-cli[inmem]>=0.4.2",
]
